--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<nav>
-  <a routerLink="/">Home</a>
-  <a routerLink="/cep">Cep</a>
-</nav>
+
+<div>
+  <h1>Meu Site</h1>
+</div>
+
 
 <router-outlet />
