--- a/src/app/cep/cep.component.html
+++ b/src/app/cep/cep.component.html
@@ -1,11 +1,14 @@
 <p>cep works!</p>
 
 
-<form [formGroup]="formCep">
-    <input type="text"[formControl]="formCep.controls.cep">
-    <input type="text"[formControl]="formCep.controls.logradouro">
-    <input type="text"[formControl]="formCep.controls.localidade">
-    <input type="text"[formControl]="formCep.controls.uf">
-    <input type="text"[formControl]="formCep.controls.numero">
-    <input type="text"[formControl]="formCep.controls.complemento">
-</form>
+<button (click)="buscarCEP()">Buscar CEP</button>
+
+
+<p>valor input</p>
+
+{{teste}}
+
+{{meutexto}}
+
+
+<input type="text" [(ngModel)]="teste">
