--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 
-<div>
-  <h1>Meu Site</h1>
-</div>
+<nav>
+  <a routerLink="/">Home</a> |
+  <a routerLink="/cep">CEP</a>   
+</nav>
 
 
 <router-outlet />
