--- a/src/app/cep/cep.component.html
+++ b/src/app/cep/cep.component.html
@@ -1,14 +1,16 @@
-<p>cep works!</p>
+<p>{{texto}}</p>
 
+<button (click)="buscaCep()">Busca CEP</button>
 
-<button (click)="buscarCEP()">Buscar CEP</button>
+<!--Formulario-->
 
+<form [formGroup]="formCep">
 
-<p>valor input</p>
+    <input type="text" [formControl]="formCep.controls.cep">
+    <input type="text" [formControl]="formCep.controls.logradouro">
+    <input type="text" [formControl]="formCep.controls.localidade">
+    <input type="text" [formControl]="formCep.controls.uf">
+    <input type="text" [formControl]="formCep.controls.numero">
+    <input type="text" [formControl]="formCep.controls.complemento">
 
-{{teste}}
-
-{{meutexto}}
-
-
-<input type="text" [(ngModel)]="teste">
+</form>
